# wasm-summit-2021

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: bench.rs
hello/: Cargo.toml  build.sh  hello.wasm
markdown/: Cargo.toml  build.sh  markdown.wasm
markdown/src/: main.rs
spelling-corrector/: Cargo.toml  build.sh  control.wasm
spelling-corrector/src/: main.rs
