[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap-std = "0.13.7"
wasi-cap-std-sync = "0.25.0"
wasmtime = "0.25.0"
wasmtime-wasi = "0.25.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[features]
uffd = ["wasmtime/uffd"]
